grammars/tree-sitter/iron/grammar.js
    source_file: $ => repeat($._declaration),

    // D-09: patch_declaration inserted directly after object_declaration
    // (natural object/patch/interface/enum order).
    _declaration: $ => choice(
      $.import_declaration,
      $.object_declaration,
      $.patch_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.func_declaration,
      $.method_declaration,
      $.extern_func_declaration,
      $.val_declaration,
      $.var_declaration,
    ),

    // Keywords generated from src/lexer/lexer.c kw_table at configure time.
    // 'and', 'await', 'comptime', 'copy', 'defer', 'drop', 'elif', 'else', 'enum', 'extends', 'extern', 'false', 'for', 'free', 'func', 'heap', 'if', 'impl', 'import', 'in', 'init', 'interface', 'is', 'leak', 'match', 'mut', 'nocopy', 'not', 'null', 'object', 'or', 'parallel', 'patch', 'pool', 'private', 'pub', 'pure', 'rc', 'readonly', 'return', 'self', 'spawn', 'super', 'true', 'unchecked', 'val', 'var', 'weak', 'while' expands to 'and', 'await', ..., 'while'.
    // Present so test_grammar_keyword_drift_tree_sitter has a substitution
    // target even though the full grammar inlines keyword literals in
    // concrete rules.
    object_declaration: $ => seq(
      optional(field('marker', $.nocopy_modifier)),
      'object',
      field('name', $.identifier),
      optional($.generic_params),
      optional(seq('extends', field('parent', $.identifier))),
      optional(seq('impl', field('implements',
          seq($.identifier, repeat(seq(',', $.identifier)))))),
      '{',
      repeat($._object_member),
      '}',
    ),

    // D-06: _object_member expanded to include init_declaration and
    // block_method_declaration alongside the pre-v3 field_declaration.
    // Phase 35 GRM-06 (Plan 35-01): drop_block + copy_block added so v4
    // `drop { ... }` / `copy { ... }` hooks inside object bodies parse.
    _object_member: $ => choice(
      $.field_declaration,
      $.init_declaration,
      $.block_method_declaration,
      $.drop_block,
      $.copy_block,
    ),
    // D-19/D-23 (Plan 13-02): optional `pub` prefix on field_declaration so
    // v3 `pub val id: Int` / `pub var health: Int` (per
    // tests/integration/v3_pub_field_synthesis.iron and v3_modifiers.txt
    // Case 1) parses without ERROR nodes. Plan 13-01 omitted this; the
    // visibility_modifier prefix discipline mirrors func_declaration (line
    // 199) and init_declaration (line 291).
    field_declaration: $ => seq(
      optional($.visibility_modifier),
      field('qualifier', choice('val', 'var')),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(','),
    ),

    // interface Name { func sig() -> T  func other(p: T) }
    func_declaration: $ => seq(
      optional(seq('@', 'fusible')),
      optional($.visibility_modifier),
      repeat($.mutation_tier_modifier),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    method_declaration: $ => seq(
      optional(seq('@', 'fusible')),
      'func',
      choice(
        // Array extension method: func [T].name(...)
        seq('[', field('elem_type', $.identifier), ']', '.'),
        // Type method: func TypeName.name(...)
        seq(field('type_name', $.identifier), '.'),
      ),
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    val_declaration: $ => seq(
      'val',
      field('binding', choice($.identifier, $.tuple_binding)),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    var_declaration: $ => seq(
      'var',
      field('binding', choice($.identifier, $.tuple_binding, '_')),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    // Tuple destructure binding: val (x, y) = pair — Phase 59 P01d
    parameter_list: $ => seq('(', optional(commaSep1($.parameter)), ')'),
    // D-04: optional `mut` modifier prefix on parameter (legacy v2 receiver-
    // form tolerance — semantically rejected by parser as IRON_ERR_V3_MUT_*
    // but syntactically tolerated to avoid ERROR nodes on v2 code mid-
    // migration; LSP-side QF-01 surfaces the codemod).
    parameter: $ => seq(
      optional(field('modifier', $.param_mut_modifier)),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    // ── v3 modifier rules (D-01) ────────────────────────────────────────
    // Named modifier rules (not anonymous-inline tokens): GRM-02 highlights
    // queries express modifier capture as `(visibility_modifier) @keyword`
    // and `(mutation_tier_modifier) @keyword.modifier` against the named
    // structural node. `mutation_tier_modifier` accepts both `readonly` and
    // `pure`; multi-tier stacking via repeat(...) at the call site.
    visibility_modifier:    $ => 'pub',
    mutation_tier_modifier: $ => choice('readonly', 'pure'),
    param_mut_modifier:     $ => 'mut',

    // ── v3 init declaration (D-05) ─────────────────────────────────────
    // init [name](params) { body }   |  pub init(params) { body }
    // Anonymous form: `init(args) { body }` (no name).
    // Named form:     `init zero() { body }`.
    init_declaration: $ => seq(
      optional($.visibility_modifier),
      'init',
      optional(field('name', $.identifier)),
      field('parameters', $.parameter_list),
      field('body', $.block),
    ),

    // ── v3 patch declaration (D-08) ────────────────────────────────────
    // patch object T [<G>] [(impl|implements) I, J] { members }
    // Mirrors object_declaration shape minus the extends clause; `target:`
    // field name (not `name:`) because semantically it points at an
    // existing type, not declaring a new one.
    //
    // Phase 87-02 PATCH-08 (Plan 13-03 deviation): the implements-clause
    // keyword is `implements` (long form, contextual-keyword via parser.c:4128
    // string compare) for `patch` declarations, NOT `impl` like for
    // `object`. Both are accepted here so Plan 13-02's corpus (which uses
    // the `impl` short form to mirror object_declaration) AND
    // tests/integration/v3_patch_implements.iron (which uses `implements`,
    // matching the Iron parser's contract) parse cleanly. Surfaced by Plan
    // 13-03's KNOWN_SKIPS trim — the integration fixture's `implements`
    // keyword was previously masked by the Phase-8 v3 skip list.
    patch_declaration: $ => seq(
      optional(field('marker', $.nocopy_modifier)),
      'patch',
      'object',
      field('target', $.identifier),
      optional($.generic_params),
      optional(seq(choice('impl', 'implements'), field('implements',
          seq($.identifier, repeat(seq(',', $.identifier)))))),
      '{',
      repeat($._object_member),
      '}',
    ),

    // ── v3 in-block method declaration (D-11) ──────────────────────────
    // [pub] [readonly] [pure] func name[<G>](params) [-> T] { body }
    // Distinguished from existing top-level `method_declaration` (which
    // carries a `TypeName.` prefix per legacy v2 receiver form): the
    // enclosing object/patch context provides the receiver here.
    block_method_declaration: $ => seq(
      optional(seq('@', 'fusible')),
      optional($.visibility_modifier),
      repeat($.mutation_tier_modifier),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    // ── Block & Statements ─────────────────────────────────────────────

    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.val_declaration,
      $.var_declaration,
      $.assignment_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.match_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.defer_statement,
      $.free_statement,
      $.leak_statement,
      $.arena_block,
      $.expression_statement,
    ),

    assignment_statement: $ => prec.right(1, seq(
      field('target', $._expression),
      field('op', choice(
        '=', '+=', '-=', '*=', '/=',
        // Phase 59 compound-assign bitwise forms
        '<<=', '>>=', '&=', '|=', '^=',
      )),
      field('value', $._expression),
    )),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    arena_block: $ => seq(
      'in',
      field('arena', $._expression),
      field('body', $.block),
    ),

    // Guard expression_statement with low precedence so other statement
    // keywords win in the _statement choice.
    expression_statement: $ => prec(-1, $._expression),

    // ── Expressions ────────────────────────────────────────────────────

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.is_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_literal,
      $.lambda_expression,
      $.heap_expression,
      $.rc_expression,
      $.weak_rc_expression,
      $.comptime_expression,
      $.await_expression,
      $.spawn_expression,
      $.string_literal,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.null_literal,
      $.self_expression,
      $.identifier,
    ),

    binary_expression: $ => choice(
      prec.left(3,  seq($._expression, field('op', choice('or', '||')),  $._expression)),
      prec.left(4,  seq($._expression, field('op', choice('and', '&&')), $._expression)),
      prec.left(5,  seq($._expression, field('op', '|'),                 $._expression)),
      prec.left(6,  seq($._expression, field('op', '^'),                 $._expression)),
      prec.left(7,  seq($._expression, field('op', '&'),                 $._expression)),
      prec.left(8,  seq($._expression, field('op', choice('==', '!=')),  $._expression)),
      prec.left(9,  seq($._expression, field('op', choice('<', '>', '<=', '>=')), $._expression)),
      prec.left(10, seq($._expression, field('op', choice('<<', '>>')),  $._expression)),
      prec.left(11, seq($._expression, field('op', choice('+', '-')),    $._expression)),
      prec.left(12, seq($._expression, field('op', choice('*', '/', '%')), $._expression)),
    ),

    call_expression: $ => prec.left(14, seq(
      field('function', $._expression),
      '(',
      optional(commaSep1($._expression)),
      ')',
    )),

    member_expression: $ => prec.left(14, seq(
      field('object', $._expression),
      '.',
      field('property', $.identifier),
    )),

    self_expression: $ => 'self',

    // Prefix-keyword expressions — all bind at UNARY precedence (13).
    // Phase 35 GRM-06 (Plan 35-01): heap_expression accepts an optional
    // heap_options clause (`heap(in: arena, allow_drop_skip: true) T(...)`)
    // mirroring parser.c:1499 IRON_TOK_HEAP named-option-list path; bare
    // `heap T(...)` form remains unchanged.
    heap_expression:     $ => prec.right(13, seq(
      'heap',
      optional($.heap_options),
      $._expression,
    )),
    heap_options: $ => seq(
      '(',
      $.heap_option,
      repeat(seq(',', $.heap_option)),
      ')',
    ),
    heap_option: $ => seq(
      field('key', choice('in', $.identifier)),
      ':',
      field('value', $._expression),
    ),
    _type: $ => choice(
      $.array_type,
      $.bounded_vector_type,
      $.function_type,
      $.tuple_type,
      $.pointer_type,
      $.rc_type,
      $.weak_rc_type,
      $.nullable_type,
      $.generic_type,
      $.type_identifier,
    ),

    type_identifier: $ => $.identifier,

    array_type: $ => prec(3, seq(
      '[',
      $._type,
      optional(seq(';', $._expression)),
      // Phase 48 layout hints: , layout: soa / , unordered — tolerated.
      repeat(seq(',', choice(
        seq('layout', ':', $.identifier),
        'unordered',
      ))),
      ']',
    )),

    // Phase 35 GRM-06 (Plan 35-01): bounded vector type `[T; <=N]` (VEC-01).
    // Distinguished from array_type by the literal `<=` token between `;`
    // and the size expression — tree-sitter's GLR picks the right form by
    // lookahead. Strict form `[T; N]` stays in array_type.
    bounded_vector_type: $ => prec(3, seq(
      '[', $._type, ';', '<=', $._expression, ']',
    )),

    // Phase 35 GRM-06 (Plan 35-01): pointer_type covers the Iron v4 checked
    // and unchecked pointer surface (parser.c:600-674):
    //   *T               — checked pointer
    //   *var T           — mutable checked pointer
    //   *unchecked T     — bare 8B C pointer (no gen tracking)
    //   *var unchecked T — mutable unchecked
    //   ?*T / ?*var T    — nullable pointer (leading `?` per PTR-13)
    // Single rule with optional `nullable` / `mutable` / `regime` named
    // children per 35-CONTEXT.md decision (avoids 4 sibling rules).
    drop_block: $ => seq('drop', field('body', $.block)),
    copy_block: $ => seq('copy', field('body', $.block)),

    // func(T, U) -> R
    integer_literal: $ => token(choice(
      /0[xX][0-9a-fA-F_]+/,  // hex
      /0[bB][01_]+/,         // binary
      /[0-9][0-9_]*/,        // decimal
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $._string_body,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_body: $ => token.immediate(prec(1, /[^"\\{}]+/)),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
